--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,7 +127,8 @@ dependencies {
     implementation 'androidx.browser:browser:1.2.0'
 
     //bilibili-api
-    implementation 'com.hiczp:bilibili-api:0.3.1'
+    implementation 'com.hiczp:bilibili-api:0.3.2'
+    compileOnly fileTree(dir: '../third_party/bilibili-api')
     implementation 'javax.xml.stream:stax-api:1.0'
     implementation 'org.codehaus.woodstox:woodstox-core-asl:4.4.1'
 
@@ -171,8 +172,7 @@ dependencies {
 //    implementation 'com.liulishuo.okdownload:okhttp:1.0.7'
     //DanmakuFlameMaster
     implementation 'com.github.ctiao:DanmakuFlameMaster:0.9.25'
-//    implementation 'com.github.ctiao:ndkbitmap-armv7a:0.9.25'
-//    implementation 'com.github.ctiao:ndkbitmap-x86:0.9.25'
+    compileOnly fileTree(dir: '../third_party/DanmakuFlameMaster/DanmakuFlameMaster')
 
     //lifecycle
     // ViewModel
