--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,7 +127,7 @@ dependencies {
     implementation 'androidx.browser:browser:1.2.0'
 
     //bilibili-api
-    implementation 'com.hiczp:bilibili-api:0.3.2'
+    implementation 'com.hiczp:bilibili-api:0.3.3'
     compileOnly fileTree(dir: '../third_party/bilibili-api')
     implementation 'javax.xml.stream:stax-api:1.0'
     implementation 'org.codehaus.woodstox:woodstox-core-asl:4.4.1'
@@ -155,8 +155,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     //exoplayer
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.11.3'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.3'
+    def exoplayerVersion = '2.11.3'
+    implementation "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion"
+    implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayerVersion"
+    implementation "com.google.android.exoplayer:exoplayer-hls:$exoplayerVersion"
 //    //mobile-ffmpeg
 //    implementation 'com.arthenica:mobile-ffmpeg-min:4.3.1'
     //okdownload
