导出前先认证

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -207,6 +207,9 @@ dependencies {
 
     //StfalconImageViewer
     implementation 'com.github.stfalcon:stfalcon-imageviewer:1.0.1'
+
+    //Biometric
+    implementation 'androidx.biometric:biometric:1.0.1'
 }
 
 protobuf {
