--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ cache:
     - third_party/
 before_install:
   - git fetch --unshallow #拒绝浅克隆
+  - rm -rf third_party #this push delete third_party
   - chmod +x script/sync_third_party.sh
   - script/sync_third_party.sh
 before_script:
