--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,10 @@ android {
     buildTypes {
 
         release {
-            minifyEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            // FIXME: 由于 XML 解析器, 不能删减
+//            minifyEnabled true
+//            shrinkResources true
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             zipAlignEnabled true
             if (isRunningOnTravis()) {
                 signingConfig signingConfigs.release
@@ -116,8 +117,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.10'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.3.9'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.4.0'
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -167,9 +168,9 @@ dependencies {
 //    implementation 'com.liulishuo.okdownload:sqlite:1.0.7'
 //    // provide okhttp to connect to backend
 //    implementation 'com.liulishuo.okdownload:okhttp:1.0.7'
-    //DanmakuFlameMaster
-    implementation 'com.github.ctiao:DanmakuFlameMaster:0.9.25'
-    compileOnly fileTree(dir: '../third_party/DanmakuFlameMaster/DanmakuFlameMaster')
+
+    //DanmakuView
+    implementation project(':danmakuview')
 
     //lifecycle
     // ViewModel
