--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ android:
   licenses:
     - android-sdk-license-.+
     - google-gdk-license-.+
+python:
+  - "3.6.1"
 cache:
   directories:
     - "$HOME/.gradle/caches/"
@@ -35,6 +37,7 @@ after_success:
     -T app/build/outputs/apk/release/*.apk
     --user "$jianguoyun_username:$jianguoyun_password"
     "https://dav.jianguoyun.com/dav/BilibiliHD/"
+  - sudo apt-get update
   - sudo apt-get install -y python3-pip
   - pip3 install lanzou-api --upgrade
   - python3 script/upload_to_lanzou.py app/build/outputs/apk/release/*.apk
