--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,16 +30,20 @@ def isRunningOnCI = { ->
 }
 
 android {
+    def buildTime = System.currentTimeMillis()
+    def baseVersionName = "0.1.2"
+
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
     defaultConfig {
         applicationId "com.duzhaokun123.bilibilihd"
         minSdkVersion 26
         targetSdkVersion 30
-        versionCode 138
-        versionName "0.1.1+${getGitHash()}${isRunningOnCI() ? "-ci" : ""}${isHasChange() ? "-changed" : ""}"
+        versionCode 139
+        versionName "$baseVersionName+${getGitHash()}${isRunningOnCI() ? "-ci" : ""}${isHasChange() ? "-changed" : ""}"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField("boolean", "IS_GIT_VERSION", "true")
+        buildConfigField("long", "BUILD_TIME", buildTime.toString())
         multiDexEnabled true
         resConfigs "en", "zh-rCN"
     }
@@ -96,7 +100,7 @@ android {
         variants.outputs.all {
             def simpleDataFormat = new SimpleDateFormat("yy-MM-dd-HH-mm")
             simpleDataFormat.setTimeZone(TimeZone.getTimeZone("GMT+8:00"))
-            outputFileName = "${defaultConfig.applicationId}_v${defaultConfig.versionName}_${defaultConfig.versionCode}_${buildType.name}_${simpleDataFormat.format(System.currentTimeMillis())}.apk"
+            outputFileName = "${defaultConfig.applicationId}_v${defaultConfig.versionName}_${defaultConfig.versionCode}_${buildType.name}_${simpleDataFormat.format(buildTime)}.apk"
         }
     }
 }
@@ -118,7 +122,7 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     //browser
-    implementation 'androidx.browser:browser:1.2.0'
+    implementation 'androidx.browser:browser:1.3.0'
 
     //bilibili-api
     implementation project(":bilibili-api")
