--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
     def baseVersionName = "0.1.2"
 
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
     defaultConfig {
         applicationId "com.duzhaokun123.bilibilihd"
         minSdkVersion 26
@@ -100,7 +100,7 @@ android {
         variants.outputs.all {
             def simpleDataFormat = new SimpleDateFormat("yy-MM-dd-HH-mm")
             simpleDataFormat.setTimeZone(TimeZone.getTimeZone("GMT+8:00"))
-            outputFileName = "${defaultConfig.applicationId}_v${defaultConfig.versionName}_${defaultConfig.versionCode}_${buildType.name}_${simpleDataFormat.format(buildTime)}.apk"
+            outputFileName = "bilibiliHD_v${defaultConfig.versionName}_${defaultConfig.versionCode}_${buildType.name}_${simpleDataFormat.format(buildTime)}.apk"
         }
     }
 }
@@ -133,7 +133,7 @@ dependencies {
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation 'com.google.android.material:material:1.3.0-alpha04'
+    implementation 'com.google.android.material:material:1.3.0-beta01'
 //    implementation 'androidx.navigation:navigation-fragment:2.2.1'
 //    implementation 'androidx.navigation:navigation-ui:2.2.1'
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -144,7 +144,7 @@ dependencies {
 //    implementation "com.google.android.material:material:1.1.0"
 
     //okhttp3
-    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -169,9 +169,9 @@ dependencies {
 
     //lifecycle
     // ViewModel
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-rc01'
     // LiveData
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-rc01'
 
     //MediaRouter
     implementation 'androidx.mediarouter:mediarouter:1.2.0'
