--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ def isRunningOnCI = { ->
 
 android {
     def buildTime = System.currentTimeMillis()
-    def baseVersionName = "0.1.2"
+    def baseVersionName = "0.1.3"
 
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -39,7 +39,7 @@ android {
         applicationId "com.duzhaokun123.bilibilihd"
         minSdkVersion 26
         targetSdkVersion 30
-        versionCode 139
+        versionCode 140
         versionName "$baseVersionName+${getGitHash()}${isRunningOnCI() ? "-ci" : ""}${isHasChange() ? "-changed" : ""}"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField("boolean", "IS_GIT_VERSION", "true")
@@ -47,16 +47,24 @@ android {
         multiDexEnabled true
         resConfigs "en", "zh-rCN"
     }
-    if (isRunningOnCI()) {
-        signingConfigs {
-            release {
-                storeFile = file("../ReleaseKey.jks")
-                storePassword = System.getenv("REL_KEY")
-                keyAlias = "key0"
-                keyPassword = System.getenv("REL_KEY")
-            }
+
+    signingConfigs {
+        def keystorePwd = null
+        def pwd = null
+        if (project.rootProject.file('local.properties').exists()) {
+            Properties properties = new Properties()
+            properties.load(project.rootProject.file('local.properties').newDataInputStream())
+            keystorePwd = properties.getProperty("REL_KEY")
+            pwd = properties.getProperty("REL_KEY")
+        }
+        release {
+            storeFile file("../ReleaseKey.jks")
+            storePassword keystorePwd != null ? keystorePwd : System.getenv("REL_KEY")
+            keyAlias "key0"
+            keyPassword pwd != null ? pwd : System.getenv("REL_KEY")
         }
     }
+
     buildTypes {
 
         release {
@@ -64,9 +72,7 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             zipAlignEnabled true
-            if (isRunningOnCI()) {
-                signingConfig signingConfigs.release
-            }
+            signingConfig signingConfigs.release
         }
 
         debug {
@@ -133,7 +139,7 @@ dependencies {
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation 'com.google.android.material:material:1.3.0-beta01'
+    implementation 'com.google.android.material:material:1.3.0-rc01'
 //    implementation 'androidx.navigation:navigation-fragment:2.2.1'
 //    implementation 'androidx.navigation:navigation-ui:2.2.1'
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -190,7 +196,7 @@ dependencies {
     implementation 'com.google.android:flexbox:2.0.1'
 
     //core
-    implementation 'androidx.core:core-ktx:1.5.0-alpha05'
+    implementation 'androidx.core:core-ktx:1.5.0-beta01'
 
     //preferencex
     implementation 'androidx.preference:preference-ktx:1.1.1'
