--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28" />
+        android:maxSdkVersion="28"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:name=".Application"
@@ -71,8 +72,7 @@
         </activity>
         <activity
             android:name=".ui.article.ArticleActivity"
-            android:label=""
-            android:theme="@style/AppTheme.TransparencyActionBar" />
+            android:label="" />
         <activity android:name=".ui.TestActivity" />
         <activity android:name=".ui.ToolActivity" />
         <activity android:name=".ui.UrlOpenActivity">
@@ -130,7 +130,7 @@
             android:label="@string/settings" />
         <activity
             android:name=".ui.login.LoginActivity"
-            android:label="@string/login" />
+            android:label="" />
         <activity android:name=".ui.main.MainActivity">
             <meta-data
                 android:name="android.app.default_searchable"
