--- a/app/build.gradle
+++ b/app/build.gradle
@@ -144,11 +144,6 @@ dependencies {
 //    implementation 'androidx.navigation:navigation-ui:2.2.1'
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
-    //XRecyclerView
-    implementation 'com.jcodecraeer:xrecyclerview:1.6.0'
-//    implementation "androidx.cardview:cardview:1.0.0"
-//    implementation "com.google.android.material:material:1.1.0"
-
     //okhttp3
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 
@@ -211,6 +206,12 @@ dependencies {
 
     //Biometric
     implementation 'androidx.biometric:biometric:1.0.1'
+
+    //SmartRefreshLayout
+    def srlVersion = "2.0.3"
+    implementation  "com.scwang.smart:refresh-layout-kernel:$srlVersion"
+    implementation  "com.scwang.smart:refresh-header-material:$srlVersion"
+    implementation  "com.scwang.smart:refresh-footer-classics:$srlVersion"
 }
 
 protobuf {
