--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,17 +24,17 @@
             android:name=".ui.play.season.SeasonPLayActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation|uiMode"
             android:supportsPictureInPicture="true"
-            android:theme="@style/AppTheme.TransparencyActionBar.DarkActionBar" />
+            android:theme="@style/AppTheme.BasePlayActivity" />
         <activity
             android:name=".ui.play.live.LivePlayActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation|uiMode"
             android:supportsPictureInPicture="true"
-            android:theme="@style/AppTheme.TransparencyActionBar.DarkActionBar" />
+            android:theme="@style/AppTheme.BasePlayActivity" />
         <activity
             android:name=".ui.play.local.LocalPlayActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation|uiMode"
             android:supportsPictureInPicture="true"
-            android:theme="@style/AppTheme.TransparencyActionBar.DarkActionBar" />
+            android:theme="@style/AppTheme.BasePlayActivity" />
         <activity
             android:name=".ui.universal.reply.ChildReplyActivity"
             android:label="@string/child_reply" />
@@ -107,7 +107,7 @@
             android:name=".ui.play.online.OnlinePlayActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation|uiMode"
             android:supportsPictureInPicture="true"
-            android:theme="@style/AppTheme.TransparencyActionBar.DarkActionBar" />
+            android:theme="@style/AppTheme.BasePlayActivity" />
         <activity android:name=".ui.JumpActivity" />
         <activity
             android:name=".ui.userspace.UserSpaceActivity"
